// Vitest Snapshot v1

exports[`TransactionExportModal > should render 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-amqh1w"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transaction History
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Export your wallet's transaction history.
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <div>
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    data-testid="TransactionExportForm"
                  >
                    <ul
                      class="css-slpw39"
                      data-testid="list-divided__items"
                    >
                      <li
                        class="flex w-full flex-col pb-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Transactions
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <div>
                                <div
                                  class="inline-flex w-full items-center space-x-3"
                                  data-testid="ButtonGroup"
                                  role="radiogroup"
                                >
                                  <button
                                    aria-checked="true"
                                    aria-label="Incoming"
                                    class="css-12yryft"
                                    data-testid="ButtonGroupOption"
                                    role="radio"
                                    type="button"
                                  >
                                    <div
                                      class="px-2"
                                    >
                                      Incoming
                                    </div>
                                  </button>
                                  <button
                                    aria-checked="false"
                                    aria-label="Outgoing"
                                    class="css-12yryft"
                                    data-testid="ButtonGroupOption"
                                    role="radio"
                                    type="button"
                                  >
                                    <div
                                      class="px-2"
                                    >
                                      Outgoing
                                    </div>
                                  </button>
                                  <button
                                    aria-checked="false"
                                    aria-label="All"
                                    class="css-12yryft"
                                    data-testid="ButtonGroupOption"
                                    role="radio"
                                    type="button"
                                  >
                                    <div
                                      class="px-2"
                                    >
                                      All
                                    </div>
                                  </button>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col pt-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Date Range
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <fieldset
                                class="flex min-w-0 flex-col css-1bcidjh"
                              >
                                <div
                                  class="static sm:relative"
                                  data-testid="TransactionExportForm--daterange-options"
                                >
                                  <span
                                    data-testid="dropdown__toggle"
                                  >
                                    <button
                                      class="flex items-center space-x-2 font-semibold focus:outline-none w-full cursor-pointer justify-between space-x-4 overflow-hidden"
                                      data-testid="CollapseToggleButton"
                                      type="button"
                                    >
                                      <span
                                        class="flex items-center space-x-1"
                                      >
                                        <div
                                          class="whitespace-nowrap leading-tight"
                                        >
                                          Month to Date
                                        </div>
                                      </span>
                                      <span
                                        class="css-e3wx3i"
                                      >
                                        <div
                                          class="p-1 css-15txs7d"
                                          height="10"
                                          width="10"
                                        >
                                          <svg
                                            id="chevron-down-small"
                                            viewBox="0 0 10 10"
                                            x="0"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                            y="0"
                                          >
                                            <path
                                              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                              fill="none"
                                              stroke="currentColor"
                                              stroke-linecap="round"
                                              stroke-linejoin="round"
                                              stroke-width="2"
                                            />
                                          </svg>
                                        </div>
                                      </span>
                                    </button>
                                  </span>
                                </div>
                              </fieldset>
                            </span>
                          </div>
                        </div>
                      </li>
                    </ul>
                    <div
                      class="mt-8 mb-4 text-lg font-semibold"
                    >
                      CSV Settings
                    </div>
                    <ul
                      class="css-slpw39"
                      data-testid="list-divided__items"
                    >
                      <li
                        class="flex w-full flex-col pb-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Include Header Row
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-header-row"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col pt-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Delimiter
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <fieldset
                                class="flex min-w-0 flex-col css-1bcidjh"
                              >
                                <div
                                  class="static sm:relative"
                                  data-testid="TransactionExportForm--delimiter-options"
                                >
                                  <span
                                    data-testid="dropdown__toggle"
                                  >
                                    <button
                                      class="flex items-center space-x-2 font-semibold focus:outline-none w-full cursor-pointer justify-between space-x-4 overflow-hidden"
                                      data-testid="CollapseToggleButton"
                                      type="button"
                                    >
                                      <span
                                        class="flex items-center space-x-1"
                                      >
                                        Comma
                                        <span
                                          class="px-1 leading-tight text-theme-secondary-500 dark:text-theme-secondary-600"
                                        >
                                          (
                                        </span>
                                        ,
                                        <span
                                          class="leading-tight text-theme-secondary-500 dark:text-theme-secondary-600"
                                        >
                                          )
                                        </span>
                                      </span>
                                      <span
                                        class="css-e3wx3i"
                                      >
                                        <div
                                          class="p-1 css-15txs7d"
                                          height="10"
                                          width="10"
                                        >
                                          <svg
                                            id="chevron-down-small"
                                            viewBox="0 0 10 10"
                                            x="0"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                            y="0"
                                          >
                                            <path
                                              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                              fill="none"
                                              stroke="currentColor"
                                              stroke-linecap="round"
                                              stroke-linejoin="round"
                                              stroke-width="2"
                                            />
                                          </svg>
                                        </div>
                                      </span>
                                    </button>
                                  </span>
                                </div>
                              </fieldset>
                            </span>
                          </div>
                        </div>
                      </li>
                    </ul>
                    <div
                      class="mt-8 mb-4 text-lg font-semibold"
                    >
                      Columns
                    </div>
                    <ul
                      class="css-slpw39"
                      data-testid="list-divided__items"
                    >
                      <li
                        class="flex w-full flex-col pb-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Transaction ID
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-tx-id"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col py-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Transaction Date
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-date"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col py-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Sender / Recipient
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-sender-recipient"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col pt-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Crypto Amount
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-crypto-amount"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                    </ul>
                    <div
                      class="css-1tkbsa1"
                    >
                      <button
                        class="css-1jhy6v9"
                        data-testid="TransactionExportForm__cancel-button"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Cancel
                        </div>
                      </button>
                      <button
                        class="css-1bx0hyc"
                        data-testid="TransactionExport__submit-button"
                        type="submit"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Export
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionExportModal > should render with fiat column 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-amqh1w"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transaction History
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Export your wallet's transaction history.
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <div>
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    data-testid="TransactionExportForm"
                  >
                    <ul
                      class="css-slpw39"
                      data-testid="list-divided__items"
                    >
                      <li
                        class="flex w-full flex-col pb-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Transactions
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <div>
                                <div
                                  class="inline-flex w-full items-center space-x-3"
                                  data-testid="ButtonGroup"
                                  role="radiogroup"
                                >
                                  <button
                                    aria-checked="true"
                                    aria-label="Incoming"
                                    class="css-12yryft"
                                    data-testid="ButtonGroupOption"
                                    role="radio"
                                    type="button"
                                  >
                                    <div
                                      class="px-2"
                                    >
                                      Incoming
                                    </div>
                                  </button>
                                  <button
                                    aria-checked="false"
                                    aria-label="Outgoing"
                                    class="css-12yryft"
                                    data-testid="ButtonGroupOption"
                                    role="radio"
                                    type="button"
                                  >
                                    <div
                                      class="px-2"
                                    >
                                      Outgoing
                                    </div>
                                  </button>
                                  <button
                                    aria-checked="false"
                                    aria-label="All"
                                    class="css-12yryft"
                                    data-testid="ButtonGroupOption"
                                    role="radio"
                                    type="button"
                                  >
                                    <div
                                      class="px-2"
                                    >
                                      All
                                    </div>
                                  </button>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col pt-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Date Range
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <fieldset
                                class="flex min-w-0 flex-col css-1bcidjh"
                              >
                                <div
                                  class="static sm:relative"
                                  data-testid="TransactionExportForm--daterange-options"
                                >
                                  <span
                                    data-testid="dropdown__toggle"
                                  >
                                    <button
                                      class="flex items-center space-x-2 font-semibold focus:outline-none w-full cursor-pointer justify-between space-x-4 overflow-hidden"
                                      data-testid="CollapseToggleButton"
                                      type="button"
                                    >
                                      <span
                                        class="flex items-center space-x-1"
                                      >
                                        <div
                                          class="whitespace-nowrap leading-tight"
                                        >
                                          Month to Date
                                        </div>
                                      </span>
                                      <span
                                        class="css-e3wx3i"
                                      >
                                        <div
                                          class="p-1 css-15txs7d"
                                          height="10"
                                          width="10"
                                        >
                                          <svg
                                            id="chevron-down-small"
                                            viewBox="0 0 10 10"
                                            x="0"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                            y="0"
                                          >
                                            <path
                                              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                              fill="none"
                                              stroke="currentColor"
                                              stroke-linecap="round"
                                              stroke-linejoin="round"
                                              stroke-width="2"
                                            />
                                          </svg>
                                        </div>
                                      </span>
                                    </button>
                                  </span>
                                </div>
                              </fieldset>
                            </span>
                          </div>
                        </div>
                      </li>
                    </ul>
                    <div
                      class="mt-8 mb-4 text-lg font-semibold"
                    >
                      CSV Settings
                    </div>
                    <ul
                      class="css-slpw39"
                      data-testid="list-divided__items"
                    >
                      <li
                        class="flex w-full flex-col pb-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Include Header Row
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-header-row"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col pt-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Delimiter
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <fieldset
                                class="flex min-w-0 flex-col css-1bcidjh"
                              >
                                <div
                                  class="static sm:relative"
                                  data-testid="TransactionExportForm--delimiter-options"
                                >
                                  <span
                                    data-testid="dropdown__toggle"
                                  >
                                    <button
                                      class="flex items-center space-x-2 font-semibold focus:outline-none w-full cursor-pointer justify-between space-x-4 overflow-hidden"
                                      data-testid="CollapseToggleButton"
                                      type="button"
                                    >
                                      <span
                                        class="flex items-center space-x-1"
                                      >
                                        Comma
                                        <span
                                          class="px-1 leading-tight text-theme-secondary-500 dark:text-theme-secondary-600"
                                        >
                                          (
                                        </span>
                                        ,
                                        <span
                                          class="leading-tight text-theme-secondary-500 dark:text-theme-secondary-600"
                                        >
                                          )
                                        </span>
                                      </span>
                                      <span
                                        class="css-e3wx3i"
                                      >
                                        <div
                                          class="p-1 css-15txs7d"
                                          height="10"
                                          width="10"
                                        >
                                          <svg
                                            id="chevron-down-small"
                                            viewBox="0 0 10 10"
                                            x="0"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                            y="0"
                                          >
                                            <path
                                              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                              fill="none"
                                              stroke="currentColor"
                                              stroke-linecap="round"
                                              stroke-linejoin="round"
                                              stroke-width="2"
                                            />
                                          </svg>
                                        </div>
                                      </span>
                                    </button>
                                  </span>
                                </div>
                              </fieldset>
                            </span>
                          </div>
                        </div>
                      </li>
                    </ul>
                    <div
                      class="mt-8 mb-4 text-lg font-semibold"
                    >
                      Columns
                    </div>
                    <ul
                      class="css-slpw39"
                      data-testid="list-divided__items"
                    >
                      <li
                        class="flex w-full flex-col pb-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Transaction ID
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-tx-id"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col py-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Transaction Date
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-date"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col py-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Sender / Recipient
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-sender-recipient"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col py-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Crypto Amount
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-crypto-amount"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                      <li
                        class="flex w-full flex-col pt-4"
                        data-testid="list-divided-item__wrapper"
                      >
                        <div
                          class="flex justify-between items-center"
                          data-testid="list-divided-item__inner-wrapper"
                        >
                          <div
                            class="flex w-full flex-col space-y-2"
                          >
                            <div
                              class="flex items-center justify-between space-x-5"
                            >
                              <span
                                class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                                data-testid="list-divided-item__label"
                              >
                                Fiat Amount
                              </span>
                            </div>
                          </div>
                          <div>
                            <span
                              data-testid="list-divided-item__value"
                            >
                              <label
                                class="css-xklln0"
                              >
                                <input
                                  checked=""
                                  class="css-1r71f0z toggle-input"
                                  data-testid="TransactionExportForm__toggle-include-fiat-amount"
                                  type="checkbox"
                                />
                                <div
                                  class="css-7lwhds toggle-handle"
                                >
                                  <span
                                    class="css-1fmiyrr"
                                  />
                                </div>
                              </label>
                            </span>
                          </div>
                        </div>
                      </li>
                    </ul>
                    <div
                      class="css-1tkbsa1"
                    >
                      <button
                        class="css-1jhy6v9"
                        data-testid="TransactionExportForm__cancel-button"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Cancel
                        </div>
                      </button>
                      <button
                        class="css-1bx0hyc"
                        data-testid="TransactionExport__submit-button"
                        type="submit"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Export
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
